--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -13,6 +13,7 @@
   /* Font sizes  */
   --size-10: 0.625rem;
   --size-14: 0.875rem;
+  --size-15: 0.9375rem;
   --size-16: 1rem;
   --size-18: 1.125rem;
   --size-20: 1.25rem;
@@ -65,6 +66,7 @@ h2 {
   font-size: 1.5rem;
   font-weight: 600;
   line-height: 1.2;
+  color: var(--black);
 }
 img {
   width: 100%;
@@ -75,8 +77,8 @@ img {
 }
 .container {
   width: 100%;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: var(--size-15);
+  padding-right: var(--size-15);
   margin-left: auto;
   margin-right: auto;
 }
@@ -89,7 +91,7 @@ img {
   user-select: none;
   background-color: transparent;
   border: 1px solid transparent;
-  padding: 1rem 2rem;
+  padding: 0.9375rem 1.875rem;
   border-radius: 11.25rem;
   transition: ease-in-out 0.3s;
 }
@@ -108,6 +110,12 @@ img {
 }
 .learn_more {
   color: var(--blue);
+}
+.wing {
+  display: block;
+  width: 100px;
+  height: 1px;
+  background-color: rgba(102, 103, 104, 0.137);
 }
 /* Media queries */
 @media (min-width: 1200px) {
