--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,9 +15,31 @@
   transition: ease-in-out 0.3s;
   z-index: 500;
 }
+.navbar.sticky {
+  background: var(--white);
+  box-shadow: 0px 0px 20px rgba(48, 63, 100, 0.2);
+}
+.navbar.sticky .navbar-toggler span,
+.navbar.sticky .brand {
+  color: var(--font-color-dark);
+}
 .navbar .navbar_wrapper {
   display: flex;
   align-items: center;
+}
+.navbar-toggler {
+  position: absolute;
+  outline: none;
+  right: var(--size-20);
+  top: var(--size-30);
+  background-color: transparent;
+  border: 1px solid transparent;
+}
+.navbar-toggler span {
+  color: var(--white);
+  font-size: var(--size-20);
+  cursor: pointer;
+  pointer-events: none;
 }
 [aria-controls="navbarDropdown"] {
   display: none;
@@ -41,8 +63,12 @@
 .menu .menu_link a {
   color: var(--text-color);
 }
+.menu .features a {
+  color: var(--blue);
+}
 .menu .menu_link a:hover {
   color: var(--blue);
+  border-bottom: 3px solid var(--blue);
 }
 /* hero section styling  */
 .header .hero_section {
@@ -409,7 +435,7 @@
 /* Hire us styling  */
 .hire_us_section {
   margin-top: 100px;
-  margin-bottom: 100px;
+  margin-bottom: 50px;
   background-color: var(--navyblue);
 }
 .hire_us_section .hire_us_wrapper {
@@ -558,6 +584,135 @@
 .message_group button {
   margin-top: 30px;
   align-self: center;
+}
+/* footer styling  */
+.footer {
+  margin: 0;
+}
+.footer .footer_wrapper {
+  display: flex;
+  flex-direction: column;
+}
+.footer_wrapper .top_footer {
+  display: flex;
+  align-items: flex-start;
+  padding-bottom: 50px;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.062);
+}
+.top_footer .company_info {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-right: auto;
+  padding: 20px;
+}
+.company_info img {
+  width: 130px;
+}
+.company_info .info li {
+  margin-bottom: 5px;
+}
+.company_info .info li i {
+  margin-right: 10px;
+  color: var(--text-color);
+}
+.info .phone {
+  color: var(--blue);
+}
+.top_footer .links {
+  display: flex;
+  gap: 100px;
+  padding: 10px;
+}
+.links .company h3,
+.links .features h3,
+.links .documentation h3,
+.links .resources h3 {
+  color: var(--black);
+}
+.links .company ul li a,
+.links .features ul li a,
+.links .documentation ul li a,
+.links .resources ul li a {
+  color: var(--text-color);
+}
+.links .company ul li a:hover,
+.links .features ul li a:hover,
+.links .documentation ul li a:hover {
+  color: var(--blue);
+}
+.company ul li a > .hiring {
+  font-size: 10px;
+  border-radius: 4px;
+  padding: 2px 4px;
+  background-color: var(--blue);
+}
+.links .features .note a {
+  color: var(--blue);
+}
+.resources ul li i {
+  margin-right: 10px;
+}
+.footer .bottom_footer {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  padding-top: 50px;
+}
+.bottom_footer .policy {
+  display: flex;
+  align-items: center;
+}
+.policy ul {
+  display: flex;
+  gap: 10px;
+  margin-right: auto;
+}
+.policy .term_link li i {
+  margin-right: 10px;
+  color: var(--text-color);
+}
+.policy .terms a {
+  color: var(--blue);
+}
+.policy .social-media {
+  display: flex;
+  gap: 20px;
+}
+.social-media ul {
+  display: flex;
+  gap: 20px;
+}
+.social-media ul li a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 35px;
+  height: 35px;
+  color: var(--text-color);
+  background-color: rgba(236, 242, 255, 255);
+  border-radius: 4px;
+}
+.social-media ul li a:hover {
+  color: var(--white);
+  background-color: rgba(103, 119, 135, 255);
+}
+.social-media select {
+  background-color: rgba(236, 242, 255, 255);
+  height: 35px;
+  resize: both;
+  border-radius: 4px;
+  border: none;
+  padding: 0px 10px;
+}
+.bottom_footer .copyright {
+  text-align: center;
+  margin: auto;
+}
+.copyright p {
+  max-width: 650px;
+  align-self: center;
+  margin-top: 20px;
 }
 @keyframes slideUp {
   0% {
