--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -11,6 +11,7 @@
   --danger: #ff8b8d;
 
   /* Font sizes  */
+  --size-5: 0.3125rem;
   --size-10: 0.625rem;
   --size-14: 0.875rem;
   --size-15: 0.9375rem;
@@ -19,6 +20,7 @@
   --size-20: 1.25rem;
   --size-25: 1.5625rem;
   --size-30: 1.875rem;
+  --size-35: 2.1875rem;
   --size-40: 2.5rem;
   --size-50: 3.125rem;
   --size-60: 3.75rem;
@@ -27,6 +29,7 @@
   --size-90: 5.625rem;
   --size-100: 6.25rem;
   --size-150: 9.375rem;
+  --size-200: 12.5rem;
 }
 html {
   scroll-behavior: smooth;
