--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,66 +1,324 @@
 /* iPads and Tablets - portrait mode*/
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   [aria-controls="navbarDropdown"] {
     display: block;
   }
-
-  [aria-expanded="false"] ~ ul {
+  [aria-expanded="false"] ~ .collapsible .menu {
     display: none;
   }
-
-  [aria-expanded="true"] ~ ul {
-    display: block;
+  [aria-expanded="false"] ~ .collapsible .btn_primary {
+    display: none;
+  }
+  .navbar_wrapper .collapsible {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: var(--size-50);
     position: absolute;
     right: 0;
-    top: var(--size-50);
+    top: 4.6875rem;
     width: 100%;
-    background-image: linear-gradient(
-      to right,
-      transparent,
-      rgba(255, 255, 255, 0.7)
-    );
-    box-shadow: 0px 0px 20px rgba(59, 56, 80, 0.1);
-    text-align: right;
+    background-color: var(--white);
   }
-  [aria-expanded="true"] ~ ul li a {
-    margin-right: var(--size-20);
-    color: var(--font-color-dark);
+  [aria-expanded="true"] ~ .collapsible .menu {
+    position: relative;
+    top: var(--size-20);
   }
-
-  .footer-top .footer-col:nth-child(3) {
-    grid-column: 1/3;
+  [aria-expanded="true"] ~ .menu .menu_link a {
+    color: var(--text-color);
+    text-decoration: none;
   }
 }
 
-@media screen and (max-width: 480px) {
-  .hero-wrapper {
-    text-align: center;
+/* mobile phones - portrait mode*/
+@media screen and (min-width: 360px) and (max-width: 767px) {
+  [aria-controls="navbarDropdown"] {
+    display: block;
   }
-  .why-me-wrapper {
+  [aria-expanded="false"] ~ .collapsible .menu {
+    display: none;
+  }
+  [aria-expanded="false"] ~ .collapsible .btn_primary {
+    display: none;
+  }
+  .navbar_wrapper .collapsible {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: var(--size-50);
+    position: absolute;
+    right: 0;
+    top: 4.6875rem;
+    width: 100%;
+    background-color: var(--white);
+  }
+
+  [aria-expanded="true"] ~ .collapsible .menu {
+    display: flex;
+    flex-direction: column;
+    gap: var(--size-20);
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    position: relative;
+    top: var(--size-20);
+  }
+  [aria-expanded="true"] ~ .menu .menu_link a:hover {
+    color: var(--text-color);
+    text-decoration: none;
+  }
+  .header .hero_section {
+    position: relative;
+    top: var(--size-150);
+  }
+  .hero_section .hero_wrapper {
+    display: flex;
+    gap: var(--size-70);
     flex-wrap: wrap;
+  }
+  .hero_wrapper .hero_title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
   }
-
-  .why-me-wrapper .block-text {
-    padding-right: 0;
+  .hero_title .title {
+    color: var(--black);
+    font-size: var(--size-30);
+    font-weight: 600;
+    font-family: "inter-bold", sans-serif;
+    line-height: 1.2;
+    margin: 0;
+    max-width: 100%;
   }
-  .why-me-wrapper > div {
-    flex: initial;
+  .hero_title .sub_title {
+    font-size: var(--size-18);
+    margin-top: var(--size-10);
+    margin-bottom: var(--size-25);
   }
-
-  .price-card.featured {
-    margin-top: initial;
+  .title_link .learn_more {
+    color: var(--blue);
+    font-weight: 600;
   }
-
-  .footer-top .footer-col:nth-child(1) {
-    grid-column: initial;
-    order: 3;
+  .logo_icons_wrapper .google {
+    top: -1.25rem;
+    left: var(--size-25);
   }
-
-  .footer-top .footer-col:nth-child(2) {
-    grid-column: initial;
+  .logo_icons_wrapper .atlassian {
+    top: -1.25rem;
+    left: 8.4375rem;
   }
-  .footer-top .footer-col:nth-child(3) {
-    grid-column: initial;
+  .logo_icons_wrapper .asana {
+    top: -1.25rem;
+    left: 16.875rem;
+  }
+  .logo_icons_wrapper .paypal {
+    top: var(--size-60);
+    left: var(--size-25);
+  }
+  .logo_icons_wrapper .google-a {
+    top: var(--size-150);
+    left: 7.5rem;
+    width: var(--size-50);
+    height: var(--size-50);
+  }
+  .logo_icons_wrapper .weave {
+    top: var(--size-60);
+    left: var(--size-200);
+  }
+  .logo_icons_wrapper .calender {
+    top: var(--size-150);
+    left: 15.625rem;
+  }
+  .benefit_section {
+    margin-top: var(--size-200);
+    margin-bottom: var(--size-100);
+  }
+  .benefit_wrapper .benefit_header {
+    max-width: 600px;
+    text-align: center;
+  }
+  .benefit_header p {
+    max-width: 250px;
+    margin: auto;
+    font-size: 16px;
+  }
+  .banner_one .banner_one_wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgba(249, 250, 254, 255);
+  }
+  .banner_one_wrapper .banner_one_header {
+    max-width: 400px;
+    text-align: center;
+    padding-top: 0;
+  }
+  .banner_one_header .title {
+    font-family: "inter-bold", sans-serif;
+    font-size: 1.5rem;
+    font-weight: 500;
+    line-height: 1.2;
+    color: var(--black);
+    max-width: 250px;
+    margin: 20px auto;
+  }
+  .why_front_wrapper .why_front_header {
+    max-width: 300px;
+    font-size: 16px;
+  }
+  .why_front_header p {
+    text-align: center;
+    max-width: 485px;
+    width: 100%;
+    font-size: 16px;
+  }
+  .why_front_wrapper .why_front {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+  .why_front .basic_elements,
+  .why_front .components,
+  .why_front .combined_components,
+  .why_front .page_layout {
+    display: flex;
+    flex-direction: row;
+    gap: var(--size-20);
+  }
+  .circle_wrapper .wing {
+    display: none;
+  }
+  .basic_elements span,
+  .components span,
+  .combined_components span,
+  .page_layout span {
+    align-self: center;
+    color: var(--black);
+    font-size: 16px;
+  }
+  .banner_two_wrapper .banner_two_icon {
+    top: 30%;
+    left: 40%;
+  }
+  .hubspot_section .hubspot_wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: var(--size-100);
+  }
+  .hubspot_image .upper_image {
+    width: 300px;
+    position: relative;
+    left: 12px;
+  }
+  .hubspot_image .image_layer {
+    width: var(--size-150);
+    position: absolute;
+    top: 100px;
+    left: -30px;
+    z-index: -1;
+  }
+  .hubspot_wrapper .hubspot_text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 500px;
+    width: 100%;
+    text-align: center;
+  }
+  .hubspot_text .logo {
+    width: 100px;
+    margin-bottom: var(--size-15);
+  }
+  .hubspot_text p {
+    max-width: 21.875rem;
+    width: 100%;
+    font-size: 20px;
+    color: var(--black);
+    margin-bottom: var(--size-30);
+  }
+  .hubspot_text h4 {
+    color: var(--black);
+    font-size: var(--size-18);
+    margin: 0;
+  }
+  .hubspot_text span {
+    font-size: 15px;
+  }
+  .partner_wrapper .partner_logo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: var(--size-30);
+  }
+  .pricing_header p {
+    font-size: 16px;
+  }
+  .pricing_wrapper .pricing_table {
+    display: grid;
+    grid-template-columns: repeat(1, minmax(300px, 1fr));
+    align-items: center;
+    justify-items: center;
+    gap: var(--size-50);
+  }
+  .pricing_table .pricing_features {
+    display: grid;
+    grid-template-columns: repeat(1, minmax(15.625rem, 1fr));
+    gap: var(--size-20);
+  }
+  .pricing_features .feature {
+    padding: var(--size-20);
+  }
+  .feature p {
+    max-width: 100%;
+    width: 100%;
+    margin: 0;
+    font-size: 16px;
+  }
+  .hire_us_section .hire_us_wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    gap: var(--size-50);
+    padding: 20px;
+  }
+  .hire_us_wrapper .hire_us {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    padding: 20px;
+    text-align: center;
+  }
+  .hire_us .sub_title {
+    max-width: 100%;
+    width: 100%;
+    margin: 0;
+    font-size: 16px;
+  }
+  .hire_us .line {
+    background-color: var(--white);
+    width: 100%;
+    margin-top: var(--size-20);
+    margin-bottom: var(--size-20);
+  }
+  .hire_us .description {
+    color: var(--white);
+    font-style: italic;
+    max-width: 18.75rem;
+    width: 100%;
+    font-size: 16px;
+  }
+  .hire_us .hire_us_footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    margin-top: var(--size-30);
   }
 }
