--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
   background-image: url("../img/backgrounds/background-top.svg");
   background-repeat: no-repeat;
   background-size: cover;
-  margin-bottom: 100px;
+  margin-bottom: var(--size-100);
 }
 /* navbar styling  */
 .header .navbar {
@@ -17,21 +17,22 @@
 }
 .navbar.sticky {
   background: var(--white);
-  box-shadow: 0px 0px 20px rgba(48, 63, 100, 0.2);
+  box-shadow: 0px 0px var(--size-20) rgba(48, 63, 100, 0.2);
 }
-.navbar.sticky .navbar-toggler span,
+.navbar.sticky .navbar_toggler span,
 .navbar.sticky .brand {
-  color: var(--font-color-dark);
+  color: var(--text-color);
 }
 .navbar .navbar_wrapper {
   display: flex;
   align-items: center;
 }
-.navbar-toggler {
+.navbar_wrapper .navbar_toggler {
   position: absolute;
   outline: none;
   right: var(--size-20);
   top: var(--size-30);
+  font-size: var(--size-20);
   background-color: transparent;
   border: 1px solid transparent;
 }
@@ -45,8 +46,8 @@
   display: none;
 }
 .navbar_wrapper .brand {
-  width: 140px;
-  height: 140px;
+  width: 8.75rem;
+  height: var(--size-80);
   margin-right: auto;
   display: flex;
   align-items: center;
@@ -57,8 +58,8 @@
 }
 .collapsible .menu {
   display: flex;
-  gap: 20px;
-  margin-right: 30px;
+  gap: var(--size-20);
+  margin-right: var(--size-30);
 }
 .menu .menu_link a {
   color: var(--text-color);
@@ -69,6 +70,7 @@
 .menu .menu_link a:hover {
   color: var(--blue);
   border-bottom: 3px solid var(--blue);
+  transition: ease-in-out 0.3s;
 }
 /* hero section styling  */
 .header .hero_section {
@@ -80,28 +82,29 @@
 }
 .hero_wrapper .hero_title {
   max-width: 450px;
+  width: 100%;
   margin-right: auto;
 }
 .hero_title .title {
   color: var(--black);
-  font-size: 40px;
+  font-size: var(--size-40);
   font-weight: 500;
   font-family: "inter-bold", sans-serif;
   line-height: 1.2;
   margin: 0;
-  max-width: 300px;
+  max-width: 18.75rem;
 }
 .hero_title .sub_title {
-  margin-top: 10px;
-  margin-bottom: 25px;
+  margin-top: var(--size-10);
+  margin-bottom: var(--size-25);
 }
 .hero_title .title_link {
   display: flex;
   align-items: center;
-  gap: 20px;
+  gap: var(--size-20);
 }
 .title_link .btn_primary i {
-  margin-right: 5px;
+  margin-right: var(--size-5);
 }
 .hero_wrapper .hero_logo_icons {
   max-width: 450px;
@@ -115,82 +118,87 @@
 }
 .logo_icons_wrapper .logo_icon {
   position: absolute;
-  width: 60px;
-  height: 60px;
+  width: var(--size-60);
+  height: var(--size-60);
   background-color: var(--white);
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 0px var(--size-10) rgba(0, 0, 0, 0.3);
   border-radius: 50%;
-  padding: 10px;
+  padding: var(--size-10);
 }
 .logo_icons_wrapper .google {
-  top: -20px;
+  top: -1.25rem;
   left: 55px;
-  width: 50px;
-  height: 50px;
+  width: var(--size-50);
+  height: var(--size-50);
 }
 .logo_icons_wrapper .atlassian {
-  top: -25px;
-  left: 160px;
+  top: -1.5625rem;
+  left: 10rem;
 }
 .logo_icons_wrapper .asana {
-  top: -25px;
+  top: -1.5625rem;
   left: 380px;
 }
 .logo_icons_wrapper .paypal {
-  top: 130px;
+  top: 8.125rem;
   left: 45px;
 }
 .logo_icons_wrapper .google-a {
   top: 240px;
-  left: 155px;
-  width: 50px;
-  height: 50px;
+  left: 9.6875rem;
+  width: var(--size-50);
+  height: var(--size-50);
 }
 .logo_icons_wrapper .weave {
-  top: 125px;
+  top: 7.8125rem;
   left: 260px;
 }
 .logo_icons_wrapper .calender {
-  top: 250px;
-  left: 350px;
+  top: 15.625rem;
+  left: 21.875rem;
 }
 /* Key benefits styling */
 .benefit_section {
-  margin-top: 100px;
-  margin-bottom: 100px;
+  margin-top: var(--size-100);
+  margin-bottom: var(--size-100);
 }
 .benefit_wrapper .benefit_header {
   max-width: 600px;
+  width: 100%;
   margin: auto;
 }
 .benefit_header h2 {
   text-align: center;
-  margin-bottom: 10px;
+  margin-bottom: var(--size-10);
 }
 .benefit_header p {
   text-align: center;
 }
 .benefit_wrapper .key_benefits {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 30px;
-  margin-top: 50px;
+  grid-template-columns: repeat(auto-fit, minmax(15.625rem, 1fr));
+  gap: var(--size-30);
+  margin-top: var(--size-50);
 }
 .key_benefits .benefit {
-  padding: 30px;
-  box-shadow: 0px 5px 20px rgb(0 0 0 / 14%);
+  padding: var(--size-30);
+  box-shadow: 0px var(--size-5) var(--size-20) rgb(0 0 0 / 14%);
+}
+.key_benefits .benefit:hover {
+  transform: scale(1.05);
+  transition: ease-in-out 0.3s;
 }
 .benefit img {
-  width: 50px;
-  height: 50px;
+  width: var(--size-50);
+  height: var(--size-50);
 }
 .benefit h3 {
   color: var(--black);
 }
 /* Banner One styling */
 .banner_one {
-  margin-top: 100px;
-  margin-bottom: 100px;
+  margin-top: var(--size-100);
+  margin-bottom: var(--size-100);
 }
 .banner_one .banner_one_wrapper {
   display: flex;
@@ -198,8 +206,9 @@
 }
 .banner_one_wrapper .banner_one_header {
   max-width: 400px;
+  width: 100%;
   margin-right: auto;
-  padding-top: 150px;
+  padding-top: var(--size-150);
 }
 .banner_one_header .title {
   font-family: "inter-bold", sans-serif;
@@ -207,35 +216,37 @@
   font-weight: 500;
   line-height: 1.2;
   color: var(--black);
-  max-width: 350px;
+  max-width: 21.875rem;
+  width: 100%;
 }
 .banner_one_header .btn_primary i {
-  margin-right: 5px;
+  margin-right: var(--size-5);
 }
 .banner_one_wrapper .banner_one_image {
-  padding-top: 100px;
+  padding-top: var(--size-100);
 }
 /* Why front styling */
 .why_front_section {
-  margin-top: 100px;
-  margin-bottom: 100px;
+  margin-top: var(--size-100);
+  margin-bottom: var(--size-100);
 }
 .why_front_section .why_front_wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 50px;
+  gap: var(--size-50);
 }
 .why_front_wrapper .why_front_header {
   max-width: 600px;
 }
 .why_front_header h2 {
   text-align: center;
-  margin-bottom: 10px;
+  margin-bottom: var(--size-10);
 }
 .why_front_header p {
   text-align: center;
   max-width: 485px;
+  width: 100%;
 }
 .why_front_wrapper .why_front {
   display: flex;
@@ -246,7 +257,7 @@
 .why_front .page_layout {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: var(--size-20);
 }
 .basic_elements .circle_wrapper,
 .components .circle_wrapper,
@@ -256,8 +267,8 @@
   align-items: center;
 }
 .circle_wrapper .circle {
-  width: 40px;
-  height: 40px;
+  width: var(--size-50);
+  height: var(--size-50);
   background-color: #ecf2ff;
   border-radius: 50%;
   display: flex;
@@ -265,8 +276,8 @@
   justify-content: center;
 }
 .circle .inner_circle {
-  width: 5px;
-  height: 5px;
+  width: var(--size-10);
+  height: var(--size-10);
   border-radius: 50%;
   background-color: var(--blue);
 }
@@ -282,18 +293,43 @@
 }
 /* banner two styling  */
 .banner_two {
-  margin-bottom: 50px;
+  margin-bottom: var(--size-50);
+}
+.banner_two .banner_two_wrapper {
+  position: relative;
+}
+.banner_two_wrapper .banner_two_icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 80px;
+  height: 80px;
+  position: absolute;
+  top: 46%;
+  left: 46.5%;
+  background-color: rgba(0, 0, 0, 0.651);
+  box-shadow: 0px 0px var(--size-10) rgba(63, 61, 61, 0.452);
+  border-radius: 50%;
+  cursor: pointer;
+}
+.banner_two_wrapper .banner_two_icon:hover {
+  transform: scale(1.1);
+  transition: ease-in-out 0.3s;
+}
+.banner_two_icon i {
+  font-size: var(--size-80);
+  color: var(--white);
 }
 /* hubspot_section styling */
 .hubspot_section {
-  margin-top: 100px;
-  margin-bottom: 100px;
+  margin-top: var(--size-100);
+  margin-bottom: var(--size-100);
 }
 .hubspot_section .hubspot_wrapper {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 100px;
+  gap: var(--size-100);
 }
 .hubspot_wrapper .hubspot_image {
   position: relative;
@@ -303,7 +339,7 @@
   position: relative;
 }
 .hubspot_image .image_layer {
-  width: 200px;
+  width: var(--size-200);
   position: absolute;
   top: 113px;
   left: -55px;
@@ -311,20 +347,22 @@
 }
 .hubspot_wrapper .hubspot_text {
   max-width: 500px;
+  width: 100%;
 }
 .hubspot_text .logo {
   width: 78px;
-  margin-bottom: 15px;
+  margin-bottom: var(--size-15);
 }
 .hubspot_text p {
-  max-width: 350px;
+  max-width: 21.875rem;
+  width: 100%;
   font-size: 17px;
   color: var(--black);
-  margin-bottom: 30px;
+  margin-bottom: var(--size-30);
 }
 .hubspot_text h4 {
   color: var(--black);
-  font-size: 15px;
+  font-size: var(--size-15);
   margin: 0;
 }
 .hubspot_text span {
@@ -332,60 +370,62 @@
 }
 /* partners styling  */
 .partner {
-  margin-top: 100px;
-  margin-bottom: 100px;
+  margin-top: var(--size-100);
+  margin-bottom: var(--size-100);
 }
 .partner .partner_wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 20px;
+  gap: var(--size-20);
 }
 .partner_wrapper .partner_title {
   max-width: 600px;
 }
 .partner_title h2 {
   text-transform: uppercase;
-  font-size: 20px;
+  font-size: var(--size-20);
   color: var(--text-color);
 }
 .partner_wrapper .partner_logo {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 80px;
+  gap: var(--size-80);
 }
 .partner_logo img {
-  width: 150px;
+  width: var(--size-150);
 }
 /* pricing styling  */
 .pricing {
-  margin-top: 100px;
-  margin-bottom: 100px;
+  margin-top: var(--size-100);
+  margin-bottom: var(--size-100);
 }
 .pricing .pricing_wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 50px;
+  gap: var(--size-50);
 }
 .pricing_wrapper .pricing_header {
   text-align: center;
 }
 .pricing_wrapper .pricing_table {
-  display: flex;
-  justify-content: center;
-  gap: 50px;
+  display: grid;
+  grid-template-columns: repeat(2, minmax(300px, 1fr));
+  align-items: center;
+  justify-items: center;
+  gap: var(--size-50);
 }
 .pricing_table .pricing_card {
-  padding: 55px;
-  box-shadow: 0px 15px 15px rgb(0 0 0 / 14%);
+  padding: 50px;
+  box-shadow: 0px var(--size-15) var(--size-15) rgb(0 0 0 / 14%);
 }
 .pricing_card .price {
-  font-size: 16px;
+  font-size: var(--size-16);
 }
 .pricing_card .price > span {
-  font-size: 40px;
+  font-size: var(--size-40);
   font-family: "Inter-bold", sans-serif;
   font-weight: 500;
   color: var(--black);
@@ -393,152 +433,157 @@
 .pricing_card .line {
   width: 100%;
   background-color: rgba(0, 0, 0, 0.308);
-  margin-top: 30px;
-  margin-bottom: 30px;
+  margin-top: var(--size-30);
+  margin-bottom: var(--size-30);
 }
 .pricing_card .description {
   max-width: 235px;
+  width: 100%;
 }
 .pricing_card .card_button {
-  margin-top: 50px;
+  margin-top: var(--size-50);
   margin-bottom: 0;
   padding: 0;
 }
 .card_button .btn_primary {
-  margin-bottom: 10px;
+  margin-bottom: var(--size-10);
 }
 .card_button .btn_primary i {
-  margin-right: 5px;
+  margin-right: var(--size-5);
 }
 .card_button p {
   margin: 0;
 }
 .pricing_table .pricing_features {
   display: grid;
-  grid-template-columns: repeat(2, minmax(250px, 1fr));
-  gap: 20px;
+  grid-template-columns: repeat(2, minmax(15.625rem, 1fr));
+  gap: var(--size-20);
 }
 .pricing_features .feature {
-  padding: 20px;
+  padding: var(--size-20);
 }
 .feature img {
-  width: 50px;
-  height: 50px;
+  width: var(--size-50);
+  height: var(--size-50);
 }
 .feature h3 {
   color: var(--black);
 }
 .feature p {
   max-width: 210px;
+  width: 100%;
   margin: 0;
 }
 /* Hire us styling  */
 .hire_us_section {
-  margin-top: 100px;
-  margin-bottom: 50px;
+  margin-top: var(--size-100);
+  margin-bottom: var(--size-50);
   background-color: var(--navyblue);
 }
 .hire_us_section .hire_us_wrapper {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 50px;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  gap: var(--size-50);
+  padding-top: var(--size-30);
+  padding-bottom: var(--size-30);
 }
 .hire_us_wrapper .hire_us {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 50px;
+  padding: var(--size-50);
 }
 .hire_us h2 {
   color: var(--white);
-  margin-bottom: 10px;
+  margin-bottom: var(--size-10);
 }
 .hire_us .sub_title {
-  max-width: 150px;
+  max-width: var(--size-150);
+  width: 100%;
   margin: 0;
 }
 .hire_us .line {
   background-color: var(--white);
-  width: 150px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  width: var(--size-150);
+  margin-top: var(--size-20);
+  margin-bottom: var(--size-20);
 }
 .hire_us .description {
   color: var(--white);
   font-style: italic;
-  max-width: 300px;
+  max-width: 18.75rem;
+  width: 100%;
 }
 .hire_us .hire_us_footer {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin-top: 30px;
+  margin-top: var(--size-30);
 }
 .hire_us_footer h4 {
   color: var(--white);
   margin: 0;
 }
 .hire_us_footer span {
-  margin-bottom: 30px;
+  margin-bottom: var(--size-30);
   font-size: 13px;
 }
 .hire_us_footer .footer_img {
   display: flex;
   align-items: center;
-  gap: 20px;
+  gap: var(--size-20);
 }
 .footer_img img {
-  width: 40px;
-  height: 40px;
+  width: var(--size-40);
+  height: var(--size-40);
   border-radius: 50%;
 }
 .footer_img #bigger {
-  width: 50px;
-  height: 50px;
+  width: var(--size-50);
+  height: var(--size-50);
 }
 .hire_us_form .form {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 20px;
+  gap: var(--size-20);
   background-color: var(--white);
-  padding: 50px;
-  border-radius: 10px;
+  padding: var(--size-50);
+  border-radius: var(--size-10);
   max-width: 450px;
+  width: 100%;
 }
 .form span {
   color: var(--black);
-  font-size: 15px;
+  font-size: var(--size-15);
 }
 .form .name_group {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: var(--size-20);
 }
 .name_group .group {
   display: flex;
   justify-content: space-between;
-  gap: 20px;
+  gap: var(--size-20);
 }
 .group input {
   width: 162px;
-  height: 35px;
-  padding: 5px;
+  height: var(--size-35);
+  padding: var(--size-5);
   border: 1px solid rgb(0 0 0 / 51%);
   border-radius: 4px;
   resize: both;
 }
 .form .select_group {
   display: flex;
-  gap: 20px;
+  gap: var(--size-20);
 }
 .select_group select {
   width: 162px;
-  height: 35px;
-  padding: 5px;
+  height: var(--size-35);
+  padding: var(--size-5);
   border: 1px solid rgb(0 0 0 / 51%);
   border-radius: 4px;
   background-color: var(--white);
@@ -550,15 +595,17 @@
 }
 .message_group textarea {
   width: 344px;
-  padding: 10px;
+  height: 7.5rem;
+  padding: var(--size-10);
   color: var(--text-color);
   font-size: 13px;
+  border: 1px solid rgb(0 0 0 / 51%);
 }
 .message_group .privacy {
   display: flex;
   align-items: flex-start;
-  gap: 5px;
-  margin-top: 10px;
+  gap: var(--size-5);
+  margin-top: var(--size-10);
 }
 .privacy input {
   border: 1px solid rgb(0 0 0 / 51%);
@@ -566,12 +613,13 @@
   background-color: var(--white);
 }
 .privacy p {
-  max-width: 350px;
+  max-width: 21.875rem;
+  width: 100%;
 }
 .message_group ul {
   display: flex;
   justify-content: center;
-  gap: 50px;
+  gap: var(--size-50);
 }
 .message_group ul li a {
   border-bottom: 2px dotted var(--text-color);
@@ -582,7 +630,7 @@
   border-bottom: 2px dotted var(--blue);
 }
 .message_group button {
-  margin-top: 30px;
+  margin-top: var(--size-30);
   align-self: center;
 }
 /* footer styling  */
@@ -596,24 +644,24 @@
 .footer_wrapper .top_footer {
   display: flex;
   align-items: flex-start;
-  padding-bottom: 50px;
+  padding-bottom: var(--size-50);
   border-bottom: 2px solid rgba(0, 0, 0, 0.062);
 }
 .top_footer .company_info {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: var(--size-20);
   margin-right: auto;
-  padding: 20px;
+  padding: var(--size-20);
 }
 .company_info img {
-  width: 130px;
+  width: 8.125rem;
 }
 .company_info .info li {
-  margin-bottom: 5px;
+  margin-bottom: var(--size-5);
 }
 .company_info .info li i {
-  margin-right: 10px;
+  margin-right: var(--size-10);
   color: var(--text-color);
 }
 .info .phone {
@@ -621,8 +669,8 @@
 }
 .top_footer .links {
   display: flex;
-  gap: 100px;
-  padding: 10px;
+  gap: var(--size-100);
+  padding: var(--size-10);
 }
 .links .company h3,
 .links .features h3,
@@ -640,9 +688,10 @@
 .links .features ul li a:hover,
 .links .documentation ul li a:hover {
   color: var(--blue);
+  transition: ease-in-out 0.3s;
 }
 .company ul li a > .hiring {
-  font-size: 10px;
+  font-size: var(--size-10);
   border-radius: 4px;
   padding: 2px 4px;
   background-color: var(--blue);
@@ -651,13 +700,13 @@
   color: var(--blue);
 }
 .resources ul li i {
-  margin-right: 10px;
+  margin-right: var(--size-10);
 }
 .footer .bottom_footer {
   display: flex;
   flex-direction: column;
-  gap: 50px;
-  padding-top: 50px;
+  gap: var(--size-50);
+  padding-top: var(--size-50);
 }
 .bottom_footer .policy {
   display: flex;
@@ -665,11 +714,11 @@
 }
 .policy ul {
   display: flex;
-  gap: 10px;
+  gap: var(--size-10);
   margin-right: auto;
 }
 .policy .term_link li i {
-  margin-right: 10px;
+  margin-right: var(--size-10);
   color: var(--text-color);
 }
 .policy .terms a {
@@ -677,18 +726,18 @@
 }
 .policy .social-media {
   display: flex;
-  gap: 20px;
+  gap: var(--size-20);
 }
 .social-media ul {
   display: flex;
-  gap: 20px;
+  gap: var(--size-20);
 }
 .social-media ul li a {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 35px;
-  height: 35px;
+  width: var(--size-35);
+  height: var(--size-35);
   color: var(--text-color);
   background-color: rgba(236, 242, 255, 255);
   border-radius: 4px;
@@ -696,30 +745,32 @@
 .social-media ul li a:hover {
   color: var(--white);
   background-color: rgba(103, 119, 135, 255);
+  transition: ease-in-out 0.3s;
 }
 .social-media select {
   background-color: rgba(236, 242, 255, 255);
-  height: 35px;
+  height: 2.1875rem;
   resize: both;
-  border-radius: 4px;
+  border-radius: 0.25rem;
   border: none;
-  padding: 0px 10px;
+  padding: 0 var(--size-10);
 }
 .bottom_footer .copyright {
   text-align: center;
   margin: auto;
 }
 .copyright p {
-  max-width: 650px;
+  max-width: 40.625rem;
+  width: 100%;
   align-self: center;
-  margin-top: 20px;
+  margin-top: var(--size-20);
 }
 @keyframes slideUp {
   0% {
-    bottom: -100px;
+    bottom: -6.25rem;
     opacity: 0;
   }
   100% {
-    bottom: 0px;
+    bottom: 0;
   }
 }
