--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -28,6 +28,278 @@
     color: var(--text-color);
     text-decoration: none;
   }
+  .header .hero_section {
+    position: relative;
+    top: 150px;
+  }
+  .hero_section .hero_wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 80px;
+  }
+  .hero_wrapper .hero_title {
+    max-width: 100%;
+    margin: auto;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .hero_title .title {
+    color: var(--black);
+    font-size: 45px;
+    font-weight: 500;
+    font-family: "inter-bold", sans-serif;
+    line-height: 1.2;
+    margin: 0;
+    max-width: 18.75rem;
+  }
+  .logo_icons_wrapper .google {
+    top: -1.25rem;
+    left: 30px;
+    width: var(--size-50);
+    height: var(--size-50);
+  }
+  .logo_icons_wrapper .atlassian {
+    top: -1.5625rem;
+    left: 190px;
+  }
+  .logo_icons_wrapper .asana {
+    top: -1.5625rem;
+    left: 400px;
+  }
+  .logo_icons_wrapper .paypal {
+    top: 60px;
+    left: 30px;
+  }
+  .logo_icons_wrapper .google-a {
+    top: 160px;
+    left: 150px;
+    width: var(--size-50);
+    height: var(--size-50);
+  }
+  .logo_icons_wrapper .weave {
+    top: 60px;
+    left: 270px;
+  }
+  .logo_icons_wrapper .calender {
+    top: 160px;
+    left: 350px;
+  }
+  .benefit_section {
+    margin-top: 250px;
+    margin-bottom: var(--size-100);
+  }
+  .banner_one .banner_one_wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgba(249, 250, 254, 255);
+  }
+  .banner_one_wrapper .banner_one_header {
+    max-width: 100%;
+    margin: auto;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    text-align: center;
+  }
+  .banner_one_header .title {
+    font-family: "inter-bold", sans-serif;
+    font-size: 25px;
+    font-weight: 500;
+    line-height: 1.2;
+    color: var(--black);
+    max-width: 600px;
+    width: 100%;
+  }
+  .banner_one_wrapper .banner_one_image {
+    padding-top: 0;
+  }
+  .circle_wrapper .wing {
+    width: 50px;
+  }
+  .hubspot_section .hubspot_wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: var(--size-100);
+  }
+  .hubspot_wrapper .hubspot_text {
+    max-width: 450px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .hubspot_text p {
+    max-width: 100%;
+    width: 100%;
+    font-size: 17px;
+    color: var(--black);
+    margin-bottom: var(--size-30);
+  }
+  .partner_wrapper .partner_logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: var(--size-50);
+  }
+  .partner_logo img {
+    width: var(--size-100);
+  }
+  .pricing_wrapper .pricing_table {
+    display: grid;
+    grid-template-columns: 1fr;
+    align-items: center;
+    justify-items: center;
+    gap: var(--size-50);
+  }
+  .pricing_table .pricing_card {
+    padding: 50px;
+    box-shadow: 0px var(--size-15) var(--size-15) rgb(0 0 0 / 14%);
+    text-align: center;
+  }
+  .pricing_card .description {
+    max-width: 95%;
+    width: 100%;
+    font-size: 16px;
+    text-align: justify;
+  }
+  .feature p {
+    max-width: 100%;
+    width: 100%;
+    margin: 0;
+  }
+  .hire_us_section .hire_us_wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: var(--size-50);
+    padding-top: var(--size-30);
+    padding-bottom: var(--size-30);
+  }
+  .hire_us_wrapper .hire_us {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: var(--size-50);
+    gap: 50px;
+  }
+  .hire_us .sub_title {
+    max-width: 100%;
+    width: 100%;
+    margin: 0;
+    font-size: 16px;
+  }
+  .hire_us .line {
+    background-color: var(--white);
+    width: 100%;
+    margin-top: var(--size-20);
+    margin-bottom: var(--size-20);
+  }
+  .hire_us .description {
+    color: var(--white);
+    font-size: 18px;
+    font-style: italic;
+    max-width: 400px;
+    width: 100%;
+  }
+  .hire_us .hire_us_footer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-top: var(--size-30);
+    padding: 20px;
+  }
+  .hire_us_form .form {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    gap: var(--size-20);
+    background-color: var(--white);
+    padding: var(--size-50);
+    border-radius: var(--size-10);
+    max-width: 100%;
+    width: 100%;
+  }
+  .form span {
+    color: var(--black);
+    font-size: 16px;
+  }
+  .group input {
+    width: 48%;
+    height: 40px;
+    padding: var(--size-5);
+    border: 1px solid rgb(0 0 0 / 51%);
+    border-radius: 4px;
+    resize: both;
+  }
+  form .select_group {
+    display: flex;
+    gap: var(--size-20);
+    justify-content: space-between;
+  }
+  .select_group select {
+    width: 48%;
+    height: 40px;
+    padding: var(--size-5);
+    border: 1px solid rgb(0 0 0 / 51%);
+    border-radius: 4px;
+    background-color: var(--white);
+    resize: both;
+  }
+  .message_group textarea {
+    width: 100%;
+    height: auto;
+    padding: var(--size-10);
+    color: var(--text-color);
+    font-size: 13px;
+    border: 1px solid rgb(0 0 0 / 51%);
+  }
+  .privacy p {
+    max-width: 100%;
+    width: 100%;
+    font-size: 16px;
+  }
+  .message_group ul {
+    display: flex;
+    justify-content: start;
+    align-items: flex-start;
+    gap: var(--size-50);
+    margin-left: 20px;
+  }
+  .footer_wrapper .top_footer {
+    display: flex;
+    align-items: flex-start;
+    padding-bottom: var(--size-50);
+    border-bottom: 2px solid rgba(0, 0, 0, 0.062);
+  }
+  .top_footer .company_info {
+    display: flex;
+    flex-direction: column;
+    gap: var(--size-20);
+    margin-right: auto;
+    padding: var(--size-20);
+    font-size: 16px;
+  }
+  .top_footer .links {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    flex-wrap: wrap;
+    gap: 50px;
+    padding: var(--size-10);
+    font-size: 16px;
+  }
+  .footer .bottom_footer {
+    display: flex;
+    flex-direction: column;
+    gap: var(--size-50);
+    padding-top: var(--size-50);
+    font-size: 16px;
+  }
 }
 
 /* mobile phones - portrait mode*/
@@ -154,6 +426,7 @@
     max-width: 400px;
     text-align: center;
     padding-top: 0;
+    margin: auto;
   }
   .banner_one_header .title {
     font-family: "inter-bold", sans-serif;
@@ -325,7 +598,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: var(--size-20);
+    gap: var(--size-10);
     padding: 30px;
     background-color: var(--white);
     border-radius: var(--size-10);
@@ -340,13 +613,13 @@
     display: flex;
     flex-direction: column;
     align-self: stretch;
-    gap: var(--size-20);
+    gap: var(--size-10);
   }
   .name_group .group {
     display: flex;
     flex-direction: column;
     align-self: stretch;
-    gap: 20px;
+    gap: 10px;
   }
   .group input {
     width: 100%;
@@ -361,7 +634,7 @@
     display: flex;
     flex-direction: column;
     align-self: stretch;
-    gap: var(--size-20);
+    gap: var(--size-10);
   }
   .select_group select {
     width: 100%;
